# debaid

./: .gitignore  Cargo.toml  LICENSE  README.md  shared-context.md
.claude-plugin/: plugin.json
.github/: zizmor.yml
.github/workflows/: ci.yml  validate_workflows.yaml
docs/: developer.md  house-style.md
docs/references/: ubuntu-merges-syncs.md
docs/references/languages/: golang.md  perl.md  python.md  rust.md
plan/: 01-original-plan.md  02-ultraplan-alternative.md  03-house-style-review.md  04-language-integration.md
scripts/: detect-source.sh
skills/autopkgtest/: SKILL.md
skills/bootstrap/: SKILL.md
skills/lintian/: SKILL.md
skills/refresh/: SKILL.md
skills/run/: SKILL.md
src/: cli.rs  error.rs  lib.rs  logging.rs  main.rs
src/commands/: autopkgtest.rs  bootstrap.rs  detect.rs  lintian.rs  mod.rs  refresh.rs  run.rs  verify.rs
tests/: run-fixtures.sh
tests/fixtures/: README.md
